[package]
name = "rush-sync-server"
version = "0.2.9"
edition = "2021"
description = "Modern asynchronous TUI application with i18n and modular command system"
license = "GPL-3.0 OR LicenseRef-Commercial"
repository = "https://github.com/LEVOGNE/rush.sync.server"
readme = "README.md"
keywords = ["tui", "terminal", "i18n", "commands"]
categories = ["command-line-utilities", "development-tools"]

# =====================================================
# CORE DEPENDENCIES (NUR STABILE BASIS)
# =====================================================
[dependencies]
# Terminal & UI
crossterm = "0.27"
ratatui = "0.25"
unicode-segmentation = "1.10"
unicode-width = "0.1"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.21"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
rust-embed = "6.8"
strip-ansi-escapes = "0.1.1"
regex = "1"
walkdir = "2"

# =====================================================
# OPTIONAL FEATURES (für später)
# =====================================================
# SCSS für Themes
sass-rs = { version = "0.2", optional = true }
chrono = { version = "0.4.41", features = ["serde"] }

# =====================================================
# FEATURE FLAGS
# =====================================================
[features]
default = []
scss = ["sass-rs"]

# =====================================================
# DEVELOPMENT DEPENDENCIES
# =====================================================
[dev-dependencies]
tokio-test = "0.4"

# =====================================================
# BUILD CONFIGURATION
# =====================================================
[[bin]]
name = "rush-sync"
path = "src/main.rs"

[lib]
name = "rush_sync_server"
path = "src/lib.rs"

# =====================================================
# PERFORMANCE & OPTIMIZATION
# =====================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
