[package]
name = "rush-sync-server"
version = "0.3.6"
edition = "2021"
description = "Modern asynchronous TUI application with i18n and modular command system"
license = "GPL-3.0 OR LicenseRef-Commercial"
repository = "https://github.com/LEVOGNE/rush.sync.server"
readme = "README.md"
keywords = ["webserver", "actix-web", "server-management", "static-hosting"]
categories = ["command-line-utilities", "network-programming"]

# =====================================================
# CORE DEPENDENCIES (NUR STABILE BASIS)
# =====================================================
[dependencies]
# Terminal & UI
crossterm = "0.27"
ratatui = "0.25"
unicode-segmentation = "1.10"
unicode-width = "0.1"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"


# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
rust-embed = "8"
strip-ansi-escapes = "0.1.1"
regex = "1"
walkdir = "2"
async-trait = "0.1"

# Server
actix-web = "4.4"
actix-rt = "2.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
flate2 = "1.0"

opener = "0.7"
reqwest = { version = "0.11", features = ["json"] }
notify = "6.0"
actix-web-actors = "4.2"
actix = "0.13"
actix-cors = "0.7"


# TLS/HTTPS Support
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
time = { version = "0.3", features = ["macros"] }

# NEU f체r Reverse Proxy:
hyper = { version = "0.14", features = ["full"] }

tokio-rustls = "0.24"

# =====================================================
# OPTIONAL FEATURES (f체r sp채ter)
# =====================================================
# SCSS f체r Themes
sass-rs = { version = "0.2", optional = true }
chrono = { version = "0.4.41", features = ["serde"] }

# =====================================================
# FEATURE FLAGS
# =====================================================
[features]
default = []
scss = ["sass-rs"]


# =====================================================
# BUILD CONFIGURATION
# =====================================================
[[bin]]
name = "rush-sync"
path = "src/main.rs"

[lib]
name = "rush_sync_server"
path = "src/lib.rs"

# =====================================================
# PERFORMANCE & OPTIMIZATION
# =====================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
